--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #ignore these files 
 
-#06vue-loader/node_modules/* 
-#07vue-router_recv/node_modules/* 
-/*/node_modules/** 
+/**/node_modules/**
+node_modules/**
+/**/bower_components/**
+bower_components/**
 .idea/
