--- a/rollup/demo02/package.json
+++ b/rollup/demo02/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.13.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.13.0",
+    "@babel/preset-env": "^7.13.5",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-buble": "^0.21.3",
     "rollup": "^2.39.1",
     "rollup-plugin-babel": "^4.4.0"
-  }
+  },
+  "dependencies": {}
 }
