--- a/babel/babel-polyfill/.babelrc
+++ b/babel/babel-polyfill/.babelrc
@@ -8,16 +8,5 @@
             }
         ]
     ],
-    "plugins": [
-        [
-            "@babel/plugin-transform-runtime",
-            {
-                "absoluteRuntime": false,
-                "corejs": 3,
-                "helpers": true,
-                "regenerator": true,
-                "useESModules": false
-            }
-        ]
-    ]
+    "plugins": []
 }
