--- a/lerna-demo/package.json
+++ b/lerna-demo/package.json
@@ -6,5 +6,8 @@
   ],
   "devDependencies": {
     "lerna": "^4.0.0"
+  },
+  "scripts": {
+    "start:sit2": "lerna --scope react-sit2 run start"
   }
 }
