--- a/lerna-demo/lerna.json
+++ b/lerna-demo/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
+  "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true,
-  "version": "0.0.1"
+  "useWorkspaces": true
 }
