--- a/lerna-demo/package.json
+++ b/lerna-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "root",
+  "name": "lerna-demo",
   "private": true,
   "workspaces": [
     "packages/*"
@@ -8,6 +8,7 @@
     "lerna": "^4.0.0"
   },
   "scripts": {
-    "start:sit2": "lerna --scope react-sit2 run start"
+    "dev:sit2": "lerna --scope vue-sit2 run serve",
+    "dev:sit1": "lerna --scope vue-sit1 run serve"
   }
 }
